--- a/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_CLIENTE_CADASTRO.form
+++ b/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_CLIENTE_CADASTRO.form
@@ -606,6 +606,9 @@
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="52" green="19" red="7" type="rgb"/>
                 </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Segoe UI" size="25" style="0"/>
+                </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="f6" green="f4" red="eb" type="rgb"/>
                 </Property>
