--- a/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_CLIENTE_EXIBIR.form
+++ b/Z_tintas_v2/src/main/java/com/mycompany/z_tintas/TELA_CLIENTE_EXIBIR.form
@@ -109,7 +109,7 @@
                       </Border>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="10" rowCount="21">
+                      <Table columnCount="11" rowCount="21">
                         <Column editable="false" title="ID" type="java.lang.Integer"/>
                         <Column editable="false" title="NOME" type="java.lang.String"/>
                         <Column editable="false" title="DT/NASC" type="java.lang.String"/>
@@ -120,10 +120,16 @@
                         <Column editable="false" title="RUA" type="java.lang.String"/>
                         <Column editable="false" title="NUMERO" type="java.lang.String"/>
                         <Column editable="false" title="BAIRRO" type="java.lang.String"/>
+                        <Column editable="false" title="TELEFONE" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
+                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                          <Title/>
+                          <Editor/>
+                          <Renderer/>
+                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
@@ -206,7 +212,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="550" y="520" width="160" height="60"/>
+                  <AbsoluteConstraints x="680" y="20" width="160" height="60"/>
                 </Constraint>
               </Constraints>
             </Component>
